mob next [ci-skip] [ci skip] [skip ci]
lastFile:DotnetStarter.Logic.Tests/HelloWorldTest.TestDepositDate.received.txt

--- a/DotnetStarter.Logic/DotnetStarter.Logic.csproj
+++ b/DotnetStarter.Logic/DotnetStarter.Logic.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ApprovalUtilities" Version="5.8.0" />
+    </ItemGroup>
+
 </Project>
