--- a/DotnetStarter.Logic.Tests/DotnetStarter.Logic.Tests.csproj
+++ b/DotnetStarter.Logic.Tests/DotnetStarter.Logic.Tests.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="ApprovalTests" Version="5.8.0" />
         <PackageReference Include="coverlet.msbuild" Version="3.1.2">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0"/>
-        <PackageReference Include="xunit" Version="2.4.1"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+        <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -20,7 +21,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DotnetStarter.Logic\DotnetStarter.Logic.csproj"/>
+        <ProjectReference Include="..\DotnetStarter.Logic\DotnetStarter.Logic.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="HelloWorldTest.Test2Deposits.approved.txt" />
+      <None Remove="HelloWorldTest.Test3Deposits.approved.txt" />
+      <None Remove="HelloWorldTest.TestDeposit.approved.txt" />
+      <None Remove="HelloWorldTest.TestDepositAndWithdraw.approved.txt" />
+      <None Remove="HelloWorldTest.TestDepositDate.approved.txt" />
+      <None Remove="HelloWorldTest.TestDepositDateAndAmount.approved.txt" />
+      <None Remove="HelloWorldTest.TestDepositDateAndAmountAndBalance.approved.txt" />
+      <None Remove="HelloWorldTest.TestWithdraw.approved.txt" />
     </ItemGroup>
 
 </Project>
